# campaignshare-fetcher

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  err.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
config/: demo.toml
data/: linux.jsonl
data/state/: citybuilding.json  linux.json
scripts/: fetch  run  test
src/campaignshare/: __init__.py
src/campaignshare/adapters/: __init__.py
src/campaignshare_fetcher/: api.py  cli.py  config.py  main.py
src/campaignshare_fetcher/adapters/: __init__.py  reddit_json.py  rss.py  rss.py.save
src/campaignshare_fetcher/utils/: time.py
tests/: test_api_smoke.py  test_cli.py  test_cli_logging.py  test_config_and_plan.py  test_main.py  test_reddit_json.py  test_reddit_json_run_e2e.py  test_rss_adapter_offline.py
tests/fixtures/: reddit_new.json
